# AuthenticationFASTAPI

./: .env  .env.stmp  MANIFEST.in  README.md  auth.db  pyproject.toml  requirements.txt  run.ps1
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat
app/: __init__.py  auth.py  config.py  database.py  mailer.py  main.py  models.py  schemas.py  utils.py  web.py
app/adapters/: auth_adapter.py  web_auth_adapter.py
app/core/: deps.py  settings.py
app/domain/: errors.py  interfaces.py  repositories.py  results.py
app/infrastructure/: mailer.py
app/services/: auth_service.py
app/static/: style.css
app/templates/: dashboard.html  forgot.html  index.html  layout.html  login.html  login_mfa.html  mfa_settings.html  register.html  reset_password.html  verify_account.html  verify_otp.html
app/web_routes/: __init__.py  base.py  cookies.py
app/web_routes/auth/: __init__.py
app/web_routes/dashboard/: __init__.py
app/web_routes/mfa/: __init__.py
app/web_routes/pages/: __init__.py
app/web_routes/reset/: __init__.py
app/web_routes/verify/: __init__.py
fastapi_auth_kit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
